Refactor: @ add to Makefile

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -15,10 +15,10 @@ $(NAME): $(OBJS)
 all : $(NAME)
 
 clean:
-		rm -rf $(OBJS)
+		@rm -rf $(OBJS)
 
 fclean: clean
-		rm -rf $(NAME)
+		@rm -rf $(NAME)
 
 re:	fclean all
 
