--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -15,10 +15,10 @@ $(NAME): $(OBJS)
 all : $(NAME)
 
 clean:
-		rm -rf $(OBJS)
+		@rm -rf $(OBJS)
 
 fclean: clean
-		rm -rf $(NAME)
+		@rm -rf $(NAME)
 
 re:	fclean all
 
