--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: jinoh <jinoh@student.42seoul.kr>           +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/09/24 01:39:25 by jinoh             #+#    #+#              #
+#    Updated: 2022/09/24 01:39:26 by jinoh            ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = a.out
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98
