--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -19,8 +19,8 @@ SRCS =	Fixed.cpp \
 
 OBJS = $(SRCS:%.cpp=%.o)
 
-%.o: %.c
-		$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
+%.o: %.cpp
+		$(CC) $(CFLAGS) -c $< -o $(<:.cpp=.o)
 
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
