fix: fix minor error for test environment

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -12,7 +12,7 @@
 
 NAME = btc
 CC = c++
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+#CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRCS =	main.cpp \
 		BitcoinExchange.cpp
