--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,21 +1,22 @@
 server {
-    listen      443 ssl;
-    server_name  jinoh.42.fr www.jinoh.42.fr;
-    root    /var/www/html;
+    listen		443 ssl;
+    server_name		jinoh.42.fr www.jinoh.42.fr;
+    root		/var/www/html;
 
-    ssl_certificate     /etc/ssl/certs/jinoh.42.fr.crt;
-    ssl_certificate_key /etc/ssl/private/jinoh.42.fr.key;
-    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_certificate	/etc/ssl/certs/jinoh.42.fr.crt;
+    ssl_certificate_key	/etc/ssl/private/jinoh.42.fr.key;
+    ssl_protocols	TLSv1.2 TLSv1.3;
 
     location / {
-		index			index.php;
+	index		index.php;
     }
 
     location ~ \.php$ {
-        fastcgi_pass wordpress:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		try_files $uri = 404;
+        fastcgi_split_path_info	^(.+\.php)(/.+)$;
+        fastcgi_pass	wordpress:9000;
+        fastcgi_index	index.php;
+        include		fastcgi_params;
+        fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	try_files $uri = 404;
     }
 }
